# learnC

./: CMakeLists.txt  main.c
doc/: cmake.txt
src/: CMakeLists.txt  srcTest.c  srcTest.h
src/01/: CMakeLists.txt  test2.c  test2.h
